--- a/pig1.html
+++ b/pig1.html
@@ -131,10 +131,10 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline">Salem, Jamaica</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">Salem, Jamaica</a>
                 </li>
             </ul>
         </div>
