--- a/pig3.html
+++ b/pig3.html
@@ -144,7 +144,7 @@
                     <a href="#" class="hover:underline me-4 md:me-6">Arcega, Lance</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline me-4 md:me-6>David, Ivan</a>
+                    <a href="#" class="hover:underline me-4 md:me-6">David, Ivan</a>
                 </li>
                 <li>
                     <a href=" #" class="hover:underline me-4 md:me-6">Salem, Jamaica</a>
